TAS-3987 ability to execute TAS RestAPI on java11